# openapi-wasm-client

./: Cargo.toml  README.md  openapi.json  openapi.yaml  package.json
.github/workflows/: ci.yml
client/: .gitignore  Cargo.toml  index.html
client/src/: lib.rs
conditional-client/: Cargo.toml  index.html
ehttp-client/: Cargo.toml  index.html
ehttp-client/src/: lib.rs
model/src/: lib.rs
openapi-gen/rust/: Cargo.toml  README.md  index.html
openapi-gen/rust/.openapi-generator/: FILES
openapi-gen/rust/docs/: Address.md  Address1.md  Block.md  Block1.md  DefaultApi.md  StoreAddress400Response.md  StoreBlock400Response.md
openapi-gen/rust/src/: lib.rs
openapi-gen/rust/src/apis/: configuration.rs  default_api.rs
openapi-gen/rust/src/models/: address.rs  address_1.rs  block.rs  block_1.rs  mod.rs  store_address_400_response.rs  store_block_400_response.rs
progenitor/: Cargo.toml  index.html
progenitor/src/: lib.rs
reqwest-client/: Cargo.toml  index.html
reqwest-client/src/: lib.rs
reqwest-client/tests/: integration_test.rs
server/: Cargo.toml
server/src/: actix.rs  db.rs  main.rs  warp.rs
server/src/http/paths/: addresses.yaml
src/: actix.rs  db.rs  handlers.rs  hyper.rs  main.rs  models.rs  warp.rs
src/http/: definitions.yaml
src/http/paths/: addresses.yaml  blocks.yaml
swagger-ui/: swagger-initializer.js
wasm-client/: Cargo.toml  build.rs  index.html
wasm-client/src/: lib.rs
