[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", default-features = false, features = [
    "multi-threaded-cf",
], rev = "6943a2d06064780a26c6ec581c3182bc8e2f6a5a" }
warp = "0.3.7"
actix-web = "4.8.0"
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["full"] }
http-body-util = "0.1.2"
bytes = "1.7.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
