[package]
name = "ehttp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ehttp = "0.2"                                      # Replace with the latest version if needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model = { path = "../model" }                      # Assuming you have a `model` crate for your `Address`, `Block`, and `ErrorResponse` types

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true # Optional: enable link-time optimization for smaller binaries
