[package]
name = "progenitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.93"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[build-dependencies]
prettyplease = "0.2.20"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "2.0"
