[package]
name = "reqwest-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
model = { path = "../model" }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.70", features = ["console"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[lib]
crate-type = ["cdylib", "rlib"]
